package fr.ua.javax86.asm;

import java.util.BitSet;

public class ASM {
    //Registres de 128 bits
    Register sse;
    //Registres de 64 bits
    Register rax;
    Register rbx;
    Register rcx;
    Register rdx;
    Register rsi;
    Register rdi;
    Register rbp;
    Register rsp;
    Register r8;
    Register r9;
    Register r10;
    Register r11;
    Register r12;
    Register r13;
    Register r14;
    Register r15;
    //Registres de 32 bits
    Register eax;
    Register ebx;
    Register ecx;
    Register edx;
    Register esi;
    Register edi;
    Register ebp;
    Register esp;
    Register r8d;
    Register r9d;
    Register r10d;
    Register r11d;
    Register r12d;
    Register r13d;
    Register r14d;
    Register r15d;
    //Registres de 16 bits
    Register ax;
    Register bx;
    Register cx;
    Register dx;
    Register si;
    Register di;
    Register bp;
    Register sp;
    Register r8w;
    Register r9w;
    Register r10w;
    Register r11w;
    Register r12w;
    Register r13w;
    Register r14w;
    Register r15w;
    //Registres de 8 bits partie haute
    Register ah;
    Register bh;
    Register ch;
    Register dh;
    //Registres de 8 bits partie basse
    Register al;
    Register bl;
    Register cl;
    Register dl;
    Register sil;
    Register dil;
    Register bpl;
    Register spl;
    Register r8b;
    Register r9b;
    Register r10b;
    Register r11b;
    Register r12b;
    Register r13b;
    Register r14b;
    Register r15b;
    public ASM(){
        sse = new Register('SSE', new BitSet(128), 0, 128);
        rax = new Register('RAX', new BitSet(64), 0, 64);
        rbx = new Register('RBX', new BitSet(64), 0, 64);
        rcx = new Register('RCX', new BitSet(64), 0, 64);
        rdx = new Register('RDX', new BitSet(64), 0, 64);
        rsi = new Register('RSI', new BitSet(64), 0, 64);
        rdi = new Register('RDI', new BitSet(64), 0, 64);
        rbp = new Register('RBP', new BitSet(64), 0, 64);
        rsp = new Register('RSP', new BitSet(64), 0, 64);
        r8 = new Register('R8', new BitSet(64), 0, 64);
        r9 = new Register('R9', new BitSet(64), 0, 64);
        r10 = new Register('R10', new BitSet(64), 0, 64);
        r11 = new Register('R11', new BitSet(64), 0, 64);
        r12 = new Register('R12', new BitSet(64), 0, 64);
        r13 = new Register('R13', new BitSet(64), 0, 64);
        r14 = new Register('R14', new BitSet(64), 0, 64);
        r15 = new Register('R15', new BitSet(64), 0, 64);
        eax = new Register('EAX', new BitSet(32), 0, 32);
        ebx = new Register('EBX', new BitSet(32), 0, 32);
        ecx = new Register('ECX', new BitSet(32), 0, 32);
        edx = new Register('EDX', new BitSet(32), 0, 32);
        esi = new Register('ESI', new BitSet(32), 0, 32);
        edi = new Register('EDI', new BitSet(32), 0, 32);
        ebp = new Register('EBP', new BitSet(32), 0, 32);
        esp = new Register('ESP', new BitSet(32), 0, 32);
        r8d = new Register('R8D', new BitSet(32), 0, 32);
        r9d = new Register('R9D', new BitSet(32), 0, 32);
        r10d = new Register('R10D', new BitSet(32), 0, 32);
        r11d = new Register('R11D', new BitSet(32), 0, 32);
        r12d = new Register('R12D', new BitSet(32), 0, 32);
        r13d = new Register('R13D', new BitSet(32), 0, 32);
        r14d = new Register('R14D', new BitSet(32), 0, 32);
        r15d = new Register('R15D', new BitSet(32), 0, 32);
        ax = new Register('AX', new BitSet(16), 0, 16);
        bx = new Register('BX', new BitSet(16), 0, 16);
        cx = new Register('CX', new BitSet(16), 0, 16);
        dx = new Register('DX', new BitSet(16), 0, 16);
        si = new Register('SI', new BitSet(16), 0, 16);
        di = new Register('DI', new BitSet(16), 0, 16);
        bp = new Register('BP', new BitSet(16), 0, 16);
        sp = new Register('SP', new BitSet(16), 0, 16);
        r8w = new Register('R8W', new BitSet(16), 0, 16);
        r9w = new Register('R9W', new BitSet(16), 0, 16);
        r10w = new Register('R10W', new BitSet(16), 0, 16);
        r11w = new Register('R11W', new BitSet(16), 0, 16);
        r12w = new Register('R12W', new BitSet(16), 0, 16);
        r13w = new Register('R13W', new BitSet(16), 0, 16);
        r14w = new Register('R14W', new BitSet(16), 0, 16);
        r15w = new Register('R15W', new BitSet(16), 0, 16);
        al = new Register('AL', new BitSet(8), 0, 8);
        bl = new Register('BL', new BitSet(8), 0, 8);
        cl = new Register('CL', new BitSet(8), 0, 8);
        dl = new Register('DL', new BitSet(8), 0, 8);
        sil = new Register('SIL', new BitSet(8), 0, 8);
        dil = new Register('DIL', new BitSet(8), 0, 8);
        bpl = new Register('BPL', new BitSet(8), 0, 8);
        spl = new Register('SPL', new BitSet(8), 0, 8);
        r8b = new Register('R8B', new BitSet(8), 0, 8);
        r9b = new Register('R9B', new BitSet(8), 0, 8);
        r10b = new Register('R10B', new BitSet(8), 0, 8);
        r11b = new Register('R11B', new BitSet(8), 0, 8);
        r12b = new Register('R12B', new BitSet(8), 0, 8);
        r13b = new Register('R13B', new BitSet(8), 0, 8);
        r14b = new Register('R14B', new BitSet(8), 0, 8);
        r15b = new Register('R15B', new BitSet(8), 0, 8);
        ah = new Register('AH', new BitSet(8), 8, 16);
        bh = new Register('BH', new BitSet(8), 8, 16);
        ch = new Register('CH', new BitSet(8), 8, 16);
        dh = new Register('DH', new BitSet(8), 8, 16);

    }
}
